// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The parsed movie must be the snapshot 1`] = `
Immutable.Map {
  "id": 1,
  "title": "Test",
  "posterImageUrl": "https://image.tmdb.org/t/p/w500/123",
}
`;

exports[`should parse the snapshot 1`] = `
Immutable.Map {
  "id": 1,
  "title": "Test",
  "posterImageUrl": "https://image.tmdb.org/t/p/w500/123",
}
`;

exports[`should parse the snapshot 2`] = `
Immutable.Map {
  "id": 2,
  "title": "Test 2",
  "posterImageUrl": "https://image.tmdb.org/t/p/w500/123",
}
`;
